Moved away spring boot data for elasticsearch in order to support elasticsearch 5.2 (spring boot's still aligned to 2.4)

--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -2,5 +2,5 @@ rating.url=http://localhost/rating
 view.url=http://localhost
 email.subject=Test Feedback Email
 from.email=noreply@feedback.please
-spring.mail.host=smtp.test.com
+spring.mail.host=localhost
 spring.mail.port= 25
