Updated properties for test setup

--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-rating.url=http://localhost/rating
-view.url=http://localhost
+rating.url=http://localhost:8080/happiness
+view.url=http://localhost:8080
 email.subject=Test Feedback Email
 from.email=noreply@feedback.please
 spring.mail.host=localhost
