--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<modules>
 		<module>email</module>
 		<module>web</module>
-	</modules>
+    </modules>
 	<packaging>pom</packaging>
 
 	<name>happiness</name>
@@ -18,7 +18,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.1.RELEASE</version>
+		<version>2.0.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -29,10 +29,26 @@
 	</properties>
 
 	<build>
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+			<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Dmaven.wagon.http.ssl.insecure=true</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
