--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,28 @@
 #
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - unit-test:
+          filters:
+            tags:
+              only: /.*/
+      - publish-docker:
+          requires:
+            - unit-test
+          filters:
+            tags:
+              only: /.*/
+            branches:
+              only: master
+
 version: 2
 jobs:
-  build:
+  unit-test:
     docker:
-    # specify the version you desire here
-    - image: circleci/openjdk:9-jdk
-
-    # Specify service dependencies here if necessary
-    # CircleCI maintains a library of pre-built images
-    # documented at https://circleci.com/docs/2.0/circleci-images/
-    # - image: circleci/postgres:9.4
+      - image: circleci/openjdk:11-jdk
 
     working_directory: ~/repo
 
@@ -21,22 +32,75 @@ jobs:
       MAVEN_OPTS: -Xmx3200m
 
     steps:
-    - checkout
+      - checkout
 
-    # Download and cache dependencies
-    - restore_cache:
-        keys:
-        - v1-dependencies-{{ checksum "pom.xml" }}
-        # fallback to using the latest cache if no exact match is found
-        - v1-dependencies-
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
 
-    - run: mvn dependency:go-offline
+      - run: mvn dependency:go-offline
 
-    - save_cache:
-        paths:
-        - ~/.m2
-        key: v1-dependencies-{{ checksum "pom.xml" }}
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-{{ checksum "pom.xml" }}
 
-    # run tests!
-    - run: mvn integration-test
+      # run tests!
+      - run: mvn integration-test
 
+  publish-docker:
+    docker:
+      - image: circleci/openjdk:11-jdk-browsers
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            - v1-dependencies-
+
+      - run: mvn dependency:go-offline
+
+      - run: cp .mvn/wrapper/settings.xml ~/.m2/settings.xml
+
+      - run: echo "<settingsSecurity><master>${maven_security_master}</master></settingsSecurity>" > ~/.m2/settings-security.xml
+      - run:
+          name: If we're building a tag, set the version to that of the tag
+          command: |
+            if [ -n "$CIRCLE_TAG" ]; \
+            then \
+              mvn versions:set -DnewVersion=${CIRCLE_TAG}; \
+            fi
+      - run: cd web
+      - run:
+          name: Publish web Docker image with Jib
+          command: |
+            if [ -n "$CIRCLE_TAG" ]; \
+            then \
+                LATEST_DOCKER_TAG=-Djib.to.tags=latest; \
+            fi; \
+            mvn compile jib:build -B -DskipTests=true \
+              -Dbuild.number=${CIRCLE_BUILD_NUM} \
+              -Dcommit.hash=${CIRCLE_SHA1} \
+              -Dcircle.workflow.guid=${CIRCLE_WORKFLOW_ID} \
+              -Dbuild.user=${CIRCLE_PROJECT_USERNAME} \
+              -Dbuild.repo=${CIRCLE_PROJECT_REPONAME} \
+              $LATEST_DOCKER_TAG
+      - run: cd ../email
+      - run:
+          name: Publish email Docker image with Jib
+          command: |
+            if [ -n "$CIRCLE_TAG" ]; \
+            then \
+                LATEST_DOCKER_TAG=-Djib.to.tags=latest; \
+            fi; \
+            mvn compile jib:build -B -DskipTests=true \
+              -Dbuild.number=${CIRCLE_BUILD_NUM} \
+              -Dcommit.hash=${CIRCLE_SHA1} \
+              -Dcircle.workflow.guid=${CIRCLE_WORKFLOW_ID} \
+              -Dbuild.user=${CIRCLE_PROJECT_USERNAME} \
+              -Dbuild.repo=${CIRCLE_PROJECT_REPONAME} \
+              $LATEST_DOCKER_TAG
