--- a/web/pom.xml
+++ b/web/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>happiness</artifactId>
-        <groupId>com.austenconstable</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <artifactId>teamhappiness</artifactId>
+        <groupId>team</groupId>
+        <version>0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -78,20 +78,18 @@
 
     <build>
         <plugins>
-
             <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.3.6</version>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
-                    <repository>team/happiness</repository>
-                    <tag>${project.version}</tag>
-                    <buildArgs>
-                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
-                    </buildArgs>
+                    <to>
+                        <image>registry.hub.docker.com/awconstable/teamhappiness:${version}</image>
+                    </to>
+                    <from>
+                        <image>gcr.io/distroless/java:11</image>
+                    </from>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
