--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,24 +74,8 @@ jobs:
             then \
               mvn versions:set -DnewVersion=${CIRCLE_TAG}; \
             fi
-      - run: cd web
       - run:
-          name: Publish web Docker image with Jib
-          command: |
-            if [ -n "$CIRCLE_TAG" ]; \
-            then \
-                LATEST_DOCKER_TAG=-Djib.to.tags=latest; \
-            fi; \
-            mvn compile jib:build -B -DskipTests=true \
-              -Dbuild.number=${CIRCLE_BUILD_NUM} \
-              -Dcommit.hash=${CIRCLE_SHA1} \
-              -Dcircle.workflow.guid=${CIRCLE_WORKFLOW_ID} \
-              -Dbuild.user=${CIRCLE_PROJECT_USERNAME} \
-              -Dbuild.repo=${CIRCLE_PROJECT_REPONAME} \
-              $LATEST_DOCKER_TAG
-      - run: cd ../email
-      - run:
-          name: Publish email Docker image with Jib
+          name: Publish Docker images with Jib
           command: |
             if [ -n "$CIRCLE_TAG" ]; \
             then \
