Stopped using deprecated version parameter in mvn build

--- a/email/pom.xml
+++ b/email/pom.xml
@@ -50,7 +50,7 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
                     <to>
-                        <image>registry.hub.docker.com/awconstable/teamhappiness-emailer:${version}</image>
+                        <image>registry.hub.docker.com/awconstable/teamhappiness-emailer:${project.version}</image>
                     </to>
                     <from>
                         <image>gcr.io/distroless/java:11</image>
