--- a/web/pom.xml
+++ b/web/pom.xml
@@ -82,7 +82,7 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <configuration>
                     <to>
-                        <image>registry.hub.docker.com/awconstable/teamhappiness:${version}</image>
+                        <image>registry.hub.docker.com/awconstable/teamhappiness:${project.version}</image>
                     </to>
                     <from>
                         <image>gcr.io/distroless/java:11</image>
