Switched to use the team service to find team members. Tweaked email formatting to include team name and point to team graph. Applied javascript performance fix to graph display.

--- a/email/src/main/resources/application.properties
+++ b/email/src/main/resources/application.properties
@@ -4,3 +4,4 @@ email.subject=Test Feedback Email
 from.email=noreply@feedback.please
 spring.mail.host=localhost
 spring.mail.port= 25
+team.service.url=http://localhost:8082
