--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - mongodata:/data/db
   teamservice:
     container_name: teamservice
-    image: awconstable/teamservice
+    image: "awconstable/teamservice:latest"
     depends_on:
       - mongo
     networks:
@@ -27,6 +27,14 @@ services:
       - spring_data_mongodb_host=mongo_container
       - spring_data_mongodb_port=27017
       - spring_data_mongodb_database=team
+  mailhog:
+    container_name: mailhog
+    image: mailhog/mailhog
+    networks:
+      - happinessnetwork
+    ports:
+      - "1025:1025"
+      - "8025:8025"
 volumes:
   mongodata:
 networks:
