--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,16 +37,16 @@ jobs:
       # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "pom.xml" }}-{{ checksum "web/pom.xml" }}
+            - v1-dependencies-{{ checksum "pom.xml" }}-{{ checksum "email/pom.xml" }}-{{ checksum "web/pom.xml" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: mvn dependency:go-offline
+      - run: mvn dependency:resolve-plugins dependency:go-offline
 
       - save_cache:
           paths:
             - ~/.m2
-          key: v1-dependencies-{{ checksum "pom.xml" }}-{{ checksum "web/pom.xml" }}
+          key: v1-dependencies-{{ checksum "pom.xml" }}-{{ checksum "email/pom.xml" }}-{{ checksum "web/pom.xml" }}
 
       # run tests!
       - run: mvn integration-test
@@ -62,7 +62,7 @@ jobs:
             - v1-dependencies-{{ checksum "pom.xml" }}-{{ checksum "web/pom.xml" }}
             - v1-dependencies-
 
-      - run: mvn dependency:go-offline
+      - run: mvn dependency:resolve-plugins dependency:go-offline
 
       - run: cp .mvn/wrapper/settings.xml ~/.m2/settings.xml
 
