--- a/web/src/main/resources/config/application.properties
+++ b/web/src/main/resources/config/application.properties
@@ -4,3 +4,4 @@ spring.mvc.static-path-pattern=/static/**
 spring.resources.chain.enabled=true
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
+management.endpoints.web.exposure.include=* 
