Switched to OpenFeign for team service REST consumption

--- a/web/src/main/resources/config/application.properties
+++ b/web/src/main/resources/config/application.properties
@@ -1,7 +1,14 @@
-team.service.url=http://localhost:8082
 spring.data.rest.base-path=/data
 spring.mvc.static-path-pattern=/static/**
 spring.resources.chain.enabled=true
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
-management.endpoints.web.exposure.include=* 
+management.endpoints.web.exposure.include=*
+server.port=8080
+#Configuring the consul registration center
+spring.cloud.discovery.enabled=false
+spring.cloud.service-registry.auto-registration.enabled=false
+spring.cloud.consul.discovery.instance-id=${spring.application.name}:${server.port}
+spring.cloud.consul.host=127.0.0.1
+spring.cloud.consul.port=8500
+spring.cloud.loadbalancer.ribbon.enabled=false
