#6 Upgrade to Spring Boot 2.4.2

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+spring.application.name=team-happiness
 spring.data.rest.base-path=/data
 spring.mvc.static-path-pattern=/static/**
-spring.resources.chain.enabled=true
-spring.resources.chain.strategy.content.enabled=true
-spring.resources.chain.strategy.content.paths=/**
+spring.web.resources.chain.enabled=true
+spring.web.resources.chain.strategy.content.enabled=true
+spring.web.resources.chain.strategy.content.paths=/**
 management.endpoints.web.exposure.include=*
 server.port=8080
 #Configuring the consul registration center
