--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 					<artifactId>jacoco-maven-plugin</artifactId>
 					<version>0.8.6</version>
 				</plugin>
+                <plugin>
+                    <groupId>de.qaware.maven</groupId>
+                    <artifactId>go-offline-maven-plugin</artifactId>
+                    <version>1.2.8</version>
+                </plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
