--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.cloud.consul.discovery.instance-id=${spring.application.name}:${server.po
 spring.cloud.consul.host=127.0.0.1
 spring.cloud.consul.port=8500
 spring.cloud.loadbalancer.ribbon.enabled=false
+server.compression.enabled=true
+server.compression.excluded-user-agents=
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript
+server.compression.min-response-size=2048
